<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionConstructorActivity">

    <Spinner
        android:id="@+id/TrC_categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:soundEffectsEnabled="false"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TrC_textView2" />

    <TextView
        android:id="@+id/TrC_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/ProductCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TrC_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/ProductName"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/TrC_textView2"
        app:layout_constraintTop_toBottomOf="@+id/TrC_categorySpinner" />

    <AutoCompleteTextView
        android:id="@+id/TrC_productName"
        android:completionThreshold="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/EditProductName"
        app:layout_constraintTop_toBottomOf="@+id/TrC_textView3"
        tools:layout_editor_absoluteX="140dp" />

    <TextView
        android:id="@+id/TrC_quantityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Quantity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/TrC_textView3"
        app:layout_constraintTop_toBottomOf="@+id/TrC_productName" />

    <EditText
        android:id="@+id/TrC_productQuantity"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:hint="@string/EditQuantity"
        app:layout_constraintStart_toStartOf="@+id/TrC_productName"
        app:layout_constraintTop_toBottomOf="@+id/TrC_quantityTextView" />

    <Spinner
        android:id="@+id/TrC_typeOfQuantitySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/TrC_productQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TrC_productQuantity"
        app:layout_constraintTop_toTopOf="@+id/TrC_productQuantity" />

    <TextView
        android:id="@+id/TrC_textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/Cost"
        app:layout_constraintStart_toStartOf="@+id/TrC_quantityTextView"
        app:layout_constraintTop_toBottomOf="@+id/TrC_productQuantity" />

    <EditText
        android:id="@+id/TrC_productCost"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/EditCost"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/TrC_productQuantity"
        app:layout_constraintTop_toBottomOf="@+id/TrC_textView8" />

    <Spinner
        android:id="@+id/TrC_typeOfCurrencySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/TrC_productCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TrC_productCost"
        app:layout_constraintTop_toTopOf="@+id/TrC_productCost" />

    <TextView
        android:id="@+id/TrC_textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/PaymentDate"
        app:layout_constraintStart_toStartOf="@+id/TrC_textView8"
        app:layout_constraintTop_toBottomOf="@+id/TrC_productCost" />

    <TextView
        android:id="@+id/TrC_transactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/EditDate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TrC_textView10"
        app:layout_constraintTop_toTopOf="@+id/TrC_textView10" />

    <Button
        android:id="@+id/TrC_submitTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submitTransaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TrC_textView10" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/TrC_isProductSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#808080"
        android:text="@string/isProduct"
        app:layout_constraintBottom_toTopOf="@+id/TrC_textView3"
        app:layout_constraintStart_toStartOf="@+id/TrC_textView3"
        app:layout_constraintTop_toBottomOf="@+id/TrC_categorySpinner" />


</androidx.constraintlayout.widget.ConstraintLayout>