<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/MM_toAddTransactionBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnToAddTransaction"
        app:layout_constraintBottom_toTopOf="@+id/MM_toAnalyticsBtn"
        app:layout_constraintEnd_toStartOf="@+id/MM_toShowTransactionsBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MM_toShoppingListBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnToShowShoppingList"
        app:layout_constraintBottom_toTopOf="@+id/MM_toProductCatalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MM_toAnalyticsBtn"
        app:layout_constraintTop_toBottomOf="@+id/MM_toShowTransactionsBtn" />

    <Button
        android:id="@+id/MM_toShowTransactionsBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btnToShowTransactions"
        app:layout_constraintBottom_toTopOf="@+id/MM_toShoppingListBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MM_toAddTransactionBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MM_toAnalyticsBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/toAnalyticsBtn"
        app:layout_constraintBottom_toTopOf="@+id/MM_toFinancialAssets"
        app:layout_constraintEnd_toStartOf="@+id/MM_toShoppingListBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MM_toAddTransactionBtn" />

    <Button
        android:id="@+id/MM_toFinancialAssets"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/MM_toFinancialAssetsBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/MM_toAnalyticsBtn"
        app:layout_constraintEnd_toStartOf="@+id/MM_toProductCatalog"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MM_toAnalyticsBtn" />

    <Button
        android:id="@+id/MM_toProductCatalog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Каталог продуктов"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MM_toFinancialAssets"
        app:layout_constraintTop_toBottomOf="@+id/MM_toShoppingListBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>