<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:orientation="vertical"
    tools:context=".QueryTransactionsActivity">

    <Button
        android:id="@+id/QTr_showTransactionDataBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/GetTransactionDataButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/QTr_showTransactionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/QTr_sumOfTransactionsTextView"
        app:layout_constraintStart_toStartOf="@+id/QTr_showTransactionDataBtn"
        app:layout_constraintTop_toBottomOf="@+id/QTr_showTransactionDataBtn" />

    <TextView
        android:id="@+id/QTr_sumOfTransactionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="Сумма транзакций: 0.00 ₽"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/QTr_dateFromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/To"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/QTr_dateToTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/From"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/QTr_dateFromTextView" />

    <TextView
        android:id="@+id/QTr_dateToBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateFormat"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/QTr_dateToTextView"
        app:layout_constraintStart_toEndOf="@+id/QTr_dateFromTextView"
        app:layout_constraintTop_toTopOf="@+id/QTr_dateFromTextView" />

    <TextView
        android:id="@+id/QTr_dateFromBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateFormat"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/QTr_dateToTextView"
        app:layout_constraintTop_toTopOf="@+id/QTr_dateToTextView" />

    <Spinner
        android:id="@+id/QTr_FilterCategorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/QTr_showTransactionDataBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QTr_dateFromBtn" />

    <ProgressBar
        android:id="@+id/QTr_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QTr_showTransactionDataBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
